Updated website with latest design and features

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
   <a href="https://t.me/+JMBspRMMT74zYWZl" target="_blank" class="floating-btn">📥 Download Zone</a>
   <a href="https://t.me/+JMBspRMMT74zYWZl" target="_blank" class="floating-btn">🎓 Join Telegram Channel</a>
   <a href="https://whatsapp.com/channel/0029Vb6Hq0K7YSdCXtjgzt1x" target="_blank" class="floating-btn">💬 Join WhatsApp Channel</a>
-  <span class="floating-btn" style="cursor: default; opacity: 0.6;">🧪 Dark Web Sim (Coming Soon)</span>
+  <span class="floating-btn" style="cursor: default; opacity: 0.6;">🧪 New Tools (Coming Soon)</span>
 </div>
 <!-- Hacker Animation & Fake Terminal -->
 <div style="display: flex; flex-direction: column; align-items: center; justify-content: center; padding: 30px; margin-top: 40px;">
