--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
-<!-- update: complete version -->
+<!-- update: 3D Burning effect enabled -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Dark Tech</title>
+
+  <!-- Fonts & Three.js -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r148/three.min.js"></script>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap');
 
@@ -33,6 +36,14 @@
       height: 100vh;
       display: block;
       z-index: -1;
+    }
+
+    #burning-effect {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100vw; height: 100vh;
+      pointer-events: none;
+      z-index: 1;
     }
 
     header {
@@ -120,227 +131,127 @@
 </head>
 <body>
 
+<!-- Matrix Background -->
 <div id="matrix">
   <canvas id="matrixCanvas"></canvas>
 </div>
+
+<!-- 🔥 3D Burning Canvas -->
+<div id="burning-effect"></div>
 
 <header>
   <h1 class="site-title">
     <span class="golden-dark">Dark</span> <span class="golden-tech">Tech</span>
   </h1>
 </header>
-
 <main>
-  <section id="about">
-    <h2>About Dark Tech</h2>
-    <p>
-      Dark Tech is the pulse of innovation in the shadows — where cutting-edge technology meets deep exploration.
-      Dive into a curated arsenal of powerful tools, breakthrough insights, and expert resources designed to empower
-      developers, hackers, and tech enthusiasts. From underground software to futuristic hardware, we bring you
-      the raw essence of tech evolution.
-    </p>
+  <section>
+    <h2>Make Money Online</h2>
+    <p>Explore various legitimate methods to earn income online, from freelancing and affiliate marketing to e-commerce and more.</p>
+    <a class="floating-btn" href="https://nairaroots.com">Visit NairaRoots</a>
   </section>
 
-  <section id="cybersecurity-courses">
-    <h2>Cyber Security Courses</h2>
-    <p>
-      Level up your skills with our expert-led Cyber Security courses. Whether you're a beginner or pro,
-      we’ve got you covered.
-    </p>
-    <ul>
-      <li><strong>Introduction to Cyber Security:</strong> Understand cyber threats and digital protection.</li>
-      <li><strong>Ethical Hacking & Penetration Testing:</strong> Learn offensive tactics to find vulnerabilities.</li>
-      <li><strong>Network Security Essentials:</strong> Master firewalls, VPNs, IDS, and more.</li>
-      <li><strong>Advanced Threat Analysis:</strong> Learn malware analysis and incident response.</li>
-    </ul>
+  <section>
+    <h2>Affiliate Programs</h2>
+    <p>Check out our top recommended affiliate programs that pay handsomely and are easy to promote, even for beginners.</p>
+    <a class="floating-btn" href="https://nairaroots.com/#affiliates">Top Affiliates</a>
+  </section>
 
-    <p>
-      🚀 Join our
-      <a href="https://whatsapp.com/channel/0029Vb6Hq0K7YSdCXtjgzt1x" target="_blank"
-         style="color:#FFD700; text-decoration:underline;">WhatsApp Channel</a>
-      for exclusive updates, tools, and giveaways!
-    </p>
-    <a href="https://your-course-link.example" target="_blank"
-       style="display:inline-block; margin-top: 1rem; padding: 10px 20px;
-              background: linear-gradient(145deg, #FFD700, #FFC107);
-              color: #222; font-weight: bold; border-radius: 8px;
-              box-shadow: 0 5px 0 #b38600, 0 10px 15px rgba(0,0,0,0.25);
-              text-decoration: none; transition: all 0.2s ease;">
-      Explore Courses & Enroll Now
-    </a>
+  <section>
+    <h2>Digital Products</h2>
+    <p>Discover our powerful digital products that solve real problems — from eBooks to templates and online tools.</p>
+    <a class="floating-btn" href="https://nairaroots.com/#products">Browse Products</a>
+  </section>
+
+  <section>
+    <h2>Terminal UI (Coming Soon)</h2>
+    <p>We are building a fake terminal interface where users can simulate hacks, process monitoring, and code animations in real time.</p>
   </section>
 </main>
 
-<!-- Floating buttons moving around -->
-<div id="floatingButtonsContainer">
-  <a href="https://mega.nz/folder/RvgHWBbD#Qr6CW1O4eezqilYbE9JCPA" target="_blank" class="floating-btn">💻 Cyber Security Courses</a>
-  <a href="https://drive.google.com/drive/folders/1zD-JrP4sgIlAedjaLxAMdg_4ArF9IYyN" target="_blank" class="floating-btn">🛠️ Free Hacking Tools</a>
-  <a href="https://drive.google.com/drive/folders/1shNOgbQ_iAfpCz-jPG-SAu5zZxVZiQ3a?usp=drive_link" target="_blank" class="floating-btn">📚 Ebooks & PDFs</a>
-  <a href="https://t.me/+JMBspRMMT74zYWZl" target="_blank" class="floating-btn">📥 Download Zone</a>
-  <a href="https://t.me/+JMBspRMMT74zYWZl" target="_blank" class="floating-btn">🎓 Join Telegram Channel</a>
-  <a href="https://whatsapp.com/channel/0029Vb6Hq0K7YSdCXtjgzt1x" target="_blank" class="floating-btn">💬 Join WhatsApp Channel</a>
-  <span class="floating-btn" style="cursor: default; opacity: 0.6;">🧪 New Tools (Coming Soon)</span>
-</div>
-<!-- Hacker Animation & Fake Terminal -->
-<div style="display: flex; flex-direction: column; align-items: center; justify-content: center; padding: 30px; margin-top: 40px;">
-  
-  <!-- Lottie Hacker Animation -->
-  <lottie-player
-    src="https://assets2.lottiefiles.com/packages/lf20_b1vubngy.json"
-    background="transparent"
-    speed="1"
-    style="max-width: 100%; width: 300px; height: 300px;"
-    loop
-    autoplay>
-  </lottie-player>
-
-  <!-- Fake Terminal -->
-  <div id="fakeTerminal" style="
-    background: #000;
-    color: #00ff00;
-    font-family: 'Courier New', Courier, monospace;
-    font-size: 14px;
-    line-height: 1.4;
-    max-width: 90%;
-    width: 600px;
-    height: 200px;
-    overflow: hidden;
-    margin-top: 20px;
-    padding: 20px;
-    border: 2px solid #00ff00;
-    border-radius: 10px;
-    box-shadow: 0 0 20px #00ff00;
-    white-space: pre-wrap;
-  ">
-  </div>
-</div>
-
-<!-- Lottie Script -->
-<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-
-<!-- Terminal Typing Simulation Script -->
-<script>
-  const terminal = document.getElementById("fakeTerminal");
-  const lines = [
-    "[+] Initializing shell...",
-    "[+] Connecting to dark web...",
-    "[+] Target IP: 192.168.0.101",
-    "[+] Port: 8080 - OPEN",
-    "[+] Injecting payload...",
-    "[+] Access granted! 🟢",
-    "[*] Extracting credentials...",
-    "[*] Username: root",
-    "[*] Password: ********",
-    "[+] Downloading data...",
-    "[+] Uploading virus.zip",
-    "[+] Logging off...",
-    "[✓] HACK COMPLETE"
-  ];
-
-  let index = 0;
-  function typeLine() {
-    if (index < lines.length) {
-      terminal.innerHTML += lines[index] + "\n";
-      terminal.scrollTop = terminal.scrollHeight;
-      index++;
-      setTimeout(typeLine, 800);
-    }
-  }
-  typeLine();
-</script>
-
 <footer>
-  &copy; 2025 Dark Tech.ONIMIX All rights reserved.
+  &copy; 2025 Dark Tech. All rights reserved.
 </footer>
 
 <script>
-  // Matrix background effect setup
-  const canvas = document.getElementById('matrixCanvas');
-  const ctx = canvas.getContext('2d');
-  const letters = '01';
-  const fontSize = 16;
-  let columns;
-  let drops = [];
+// Matrix Code Animation
+const canvas = document.getElementById("matrixCanvas");
+const ctx = canvas.getContext("2d");
 
-  function resizeCanvas() {
-    canvas.width = window.innerWidth;
-    canvas.height = window.innerHeight;
-    columns = Math.floor(canvas.width / fontSize);
-    drops = [];
-    for(let x = 0; x < columns; x++) {
-      drops[x] = Math.random() * canvas.height / fontSize;
+canvas.width = window.innerWidth;
+canvas.height = window.innerHeight;
+
+let chars = "アァイィウヴエエオカキクケコサシスセソタチツテトナニヌネノハヒフヘホ0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ";
+chars = chars.split("");
+
+let fontSize = 14;
+let columns = canvas.width / fontSize;
+let drops = [];
+
+for (let x = 0; x < columns; x++) drops[x] = 1;
+
+function draw() {
+  ctx.fillStyle = "rgba(0, 0, 0, 0.05)";
+  ctx.fillRect(0, 0, canvas.width, canvas.height);
+
+  ctx.fillStyle = "#0F0";
+  ctx.font = fontSize + "px monospace";
+
+  for (let i = 0; i < drops.length; i++) {
+    let text = chars[Math.floor(Math.random() * chars.length)];
+    ctx.fillText(text, i * fontSize, drops[i] * fontSize);
+
+    if (drops[i] * fontSize > canvas.height && Math.random() > 0.975)
+      drops[i] = 0;
+
+    drops[i]++;
+  }
+}
+setInterval(draw, 50);
+// 3D Burning Corner Animation (Three.js)
+import * as THREE from "https://cdn.skypack.dev/three@0.152.2";
+
+let scene = new THREE.Scene();
+let camera = new THREE.PerspectiveCamera(60, window.innerWidth / window.innerHeight, 0.1, 1000);
+let renderer = new THREE.WebGLRenderer({ alpha: true });
+renderer.setSize(150, 150);
+renderer.setClearColor(0x000000, 0); // Transparent
+document.body.appendChild(renderer.domElement);
+renderer.domElement.style.position = "fixed";
+renderer.domElement.style.bottom = "0px";
+renderer.domElement.style.right = "0px";
+renderer.domElement.style.zIndex = "1000";
+
+camera.position.z = 5;
+
+let geometry = new THREE.SphereGeometry(0.5, 32, 32);
+let material = new THREE.ShaderMaterial({
+  vertexShader: `
+    varying vec2 vUv;
+    void main() {
+      vUv = uv;
+      gl_Position = projectionMatrix * modelViewMatrix * vec4(position, 1.0);
     }
-  }
-  resizeCanvas();
-  window.addEventListener('resize', resizeCanvas);
-
-  function drawMatrix() {
-    ctx.fillStyle = 'rgba(0, 0, 0, 0.05)';
-    ctx.fillRect(0, 0, canvas.width, canvas.height);
-    ctx.fillStyle = '#0F0';
-    ctx.font = fontSize + 'px monospace';
-
-    for(let i = 0; i < drops.length; i++) {
-      const text = letters.charAt(Math.floor(Math.random() * letters.length));
-      ctx.fillText(text, i * fontSize, drops[i] * fontSize);
-
-      if(drops[i] * fontSize > canvas.height && Math.random() > 0.975) {
-        drops[i] = 0;
-      }
-      drops[i]++;
+  `,
+  fragmentShader: `
+    varying vec2 vUv;
+    void main() {
+      float intensity = 1.0 - distance(vUv, vec2(0.5));
+      vec3 flame = mix(vec3(1.0, 0.3, 0.0), vec3(1.0, 1.0, 0.0), vUv.y);
+      gl_FragColor = vec4(flame * intensity, intensity);
     }
-  }
-  setInterval(drawMatrix, 35);
+  `,
+  transparent: true
+});
+let sphere = new THREE.Mesh(geometry, material);
+scene.add(sphere);
 
-  // Floating buttons movement logic
-  const container = document.getElementById('floatingButtonsContainer');
-  const buttons = container.querySelectorAll('.floating-btn');
-  const speedRange = 0.3; // max speed for movement
-
-  // Initialize buttons with random positions and speed vectors
-  buttons.forEach(btn => {
-    btn.style.left = Math.random() * (window.innerWidth - btn.offsetWidth) + 'px';
-    btn.style.top = Math.random() * (window.innerHeight - btn.offsetHeight) + 'px';
-    btn.speedX = (Math.random() - 0.5) * speedRange;
-    btn.speedY = (Math.random() - 0.5) * speedRange;
-  });
-
-  function moveButtons() {
-    buttons.forEach(btn => {
-      let left = parseFloat(btn.style.left);
-      let top = parseFloat(btn.style.top);
-
-      // Update position
-      left += btn.speedX;
-      top += btn.speedY;
-
-      // Bounce off edges horizontally
-      if(left < 0) {
-        left = 0;
-        btn.speedX *= -1;
-      } else if(left + btn.offsetWidth > window.innerWidth) {
-        left = window.innerWidth - btn.offsetWidth;
-        btn.speedX *= -1;
-      }
-
-      // Bounce off edges vertically
-      if(top < 0) {
-        top = 0;
-        btn.speedY *= -1;
-      } else if(top + btn.offsetHeight > window.innerHeight) {
-        top = window.innerHeight - btn.offsetHeight;
-        btn.speedY *= -1;
-      }
-
-      btn.style.left = left + 'px';
-      btn.style.top = top + 'px';
-    });
-    requestAnimationFrame(moveButtons);
-  }
-
-  moveButtons();
-
+function animate() {
+  requestAnimationFrame(animate);
+  sphere.rotation.y += 0.02;
+  renderer.render(scene, camera);
+}
+animate();
 </script>
-
 </body>
 </html>
