--- a/index.html
+++ b/index.html
@@ -3,197 +3,79 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Dark Tech</title>
+  <title>Dark Tech.ONIMIX</title>
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap');
-
+    /* Reset and basics */
     body, html {
-      margin: 0; padding: 0; height: 100%;
-      overflow-x: hidden;
-      font-family: 'Orbitron', sans-serif;
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      overflow: hidden;
       background: black;
-      color: #eee;
-      perspective: 1000px;
+      color: #0F0;
+      font-family: 'Courier New', Courier, monospace;
     }
 
-    #matrix {
-      position: fixed;
-      top: 0; left: 0;
-      width: 100vw;
-      height: 100vh;
-      background: black;
-      z-index: -1;
-    }
-
+    /* Matrix canvas full screen behind everything */
     #matrixCanvas {
       position: fixed;
-      top: 0; left: 0;
+      top: 0;
+      left: 0;
       width: 100vw;
       height: 100vh;
       display: block;
-      z-index: -1;
+      z-index: 0;
+      background: black;
     }
 
-    header {
-      text-align: center;
-      margin: 2rem 0 1rem 0;
+    /* Floating buttons container */
+    #floatingButtonsContainer {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      pointer-events: none; /* Allow clicks through container */
+      z-index: 10;
     }
 
-    .site-title {
-      font-size: 4rem;
-      font-weight: 900;
-      transform-style: preserve-3d;
-      animation: rotate3D 20s linear infinite;
-      display: inline-block;
-    }
-
-    .golden-dark, .golden-tech {
-      color: #FFD700;
-      text-shadow:
-        0 0 10px #FFD700,
-        0 0 20px #FFB800,
-        0 0 30px #FFB800;
-    }
-
-    @keyframes rotate3D {
-      0%   { transform: rotateX(0deg) rotateY(0deg); }
-      50%  { transform: rotateX(360deg) rotateY(360deg); }
-      100% { transform: rotateX(0deg) rotateY(0deg); }
-    }
-
-    main {
-      max-width: 900px;
-      margin: 2rem auto;
-      padding: 0 1rem;
-    }
-
-    section {
-      margin-bottom: 3rem;
-      background: rgba(0,0,0,0.6);
-      padding: 1.5rem;
-      border-radius: 12px;
-      box-shadow: 0 0 15px #FFD700;
-    }
-
-    h2 {
-      color: #FFD700;
-      margin-bottom: 1rem;
-      text-transform: uppercase;
-      letter-spacing: 2px;
-    }
-
-    p {
-      font-size: 1.1rem;
-      line-height: 1.5;
-      color: #ddd;
-    }
-
-    footer {
-      text-align: center;
-      padding: 1rem;
-      color: #555;
-      font-size: 0.9rem;
-    }
-
+    /* Floating buttons style */
     .floating-btn {
       position: absolute;
-      background: linear-gradient(135deg, #00ffcc, #006666);
-      color: #000;
-      padding: 12px 18px;
-      border-radius: 12px;
-      font-weight: 700;
+      display: inline-block;
+      background: rgba(0, 255, 0, 0.15);
+      color: #0F0;
+      padding: 6px 12px;
+      border-radius: 6px;
+      font-weight: bold;
+      font-size: 13px;
       text-decoration: none;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      box-shadow: 0 0 15px #00ffcc;
-      transform-style: preserve-3d;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-      white-space: nowrap;
+      user-select: none;
+      cursor: pointer;
+      pointer-events: auto; /* Enable clicking buttons */
+      box-shadow: 0 0 8px #0F0;
+      transition: background 0.3s ease;
     }
 
     .floating-btn:hover {
-      transform: rotateY(15deg) scale(1.1);
-      box-shadow: 0 0 25px #00ffd6, 0 0 35px #00b3a3;
-      background: linear-gradient(135deg, #00ffd6, #00b3a3);
+      background: rgba(0, 255, 0, 0.35);
     }
-  </style>
-</head>
-<body>
 
-<div id="matrix">
-  <canvas id="matrixCanvas"></canvas>
-</div>
+    /* Hacker Animation & Fake Terminal container */
+    #mainContent {
+      position: relative;
+      z-index: 20;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      padding: 30px;
+      margin-top: 40px;
+      pointer-events: auto;
+    }
 
-<header>
-  <h1 class="site-title">
-    <span class="golden-dark">Dark</span> <span class="golden-tech">Tech</span>
-  </h1>
-</header>
-
-<main>
-  <section id="about">
-    <h2>About Dark Tech</h2>
-    <p>
-      Dark Tech is the pulse of innovation in the shadows — where cutting-edge technology meets deep exploration.
-      Dive into a curated arsenal of powerful tools, breakthrough insights, and expert resources designed to empower
-      developers, hackers, and tech enthusiasts. From underground software to futuristic hardware, we bring you
-      the raw essence of tech evolution.
-    </p>
-  </section>
-
-  <section id="cybersecurity-courses">
-    <h2>Cyber Security Courses</h2>
-    <p>
-      Level up your skills with our expert-led Cyber Security courses. Whether you're a beginner or pro,
-      we’ve got you covered.
-    </p>
-    <ul>
-      <li><strong>Introduction to Cyber Security:</strong> Understand cyber threats and digital protection.</li>
-      <li><strong>Ethical Hacking & Penetration Testing:</strong> Learn offensive tactics to find vulnerabilities.</li>
-      <li><strong>Network Security Essentials:</strong> Master firewalls, VPNs, IDS, and more.</li>
-      <li><strong>Advanced Threat Analysis:</strong> Learn malware analysis and incident response.</li>
-    </ul>
-
-    <p>
-      🚀 Join our
-      <a href="https://whatsapp.com/channel/0029Vb6Hq0K7YSdCXtjgzt1x" target="_blank"
-         style="color:#FFD700; text-decoration:underline;">WhatsApp Channel</a>
-      for exclusive updates, tools, and giveaways!
-    </p>
-    <a href="https://your-course-link.example" target="_blank"
-       style="display:inline-block; margin-top: 1rem; padding: 10px 20px;
-              background: linear-gradient(145deg, #FFD700, #FFC107);
-              color: #222; font-weight: bold; border-radius: 8px;
-              box-shadow: 0 5px 0 #b38600, 0 10px 15px rgba(0,0,0,0.25);
-              text-decoration: none; transition: all 0.2s ease;">
-      Explore Courses & Enroll Now
-    </a>
-  </section>
-<!-- Floating buttons moving around -->
-  <div id="floatingButtonsContainer">
-    <a href="https://mega.nz/folder/RvgHWBbD#Qr6CW1O4eezqilYbE9JCPA" target="_blank" class="floating-btn">💻 Cyber Security Courses</a>
-    <a href="https://drive.google.com/drive/folders/1zD-JrP4sgIlAedjaLxAMdg_4ArF9IYyN" target="_blank" class="floating-btn">🛠️ Free Hacking Tools</a>
-    <a href="https://drive.google.com/drive/folders/1shNOgbQ_iAfpCz-jPG-SAu5zZxVZiQ3a?usp=drive_link" target="_blank" class="floating-btn">📚 Ebooks & PDFs</a>
-    <a href="https://t.me/+JMBspRMMT74zYWZl" target="_blank" class="floating-btn">📥 Download Zone</a>
-    <a href="https://t.me/+JMBspRMMT74zYWZl" target="_blank" class="floating-btn">🎓 Join Telegram Channel</a>
-    <a href="https://whatsapp.com/channel/0029Vb6Hq0K7YSdCXtjgzt1x" target="_blank" class="floating-btn">💬 Join WhatsApp Channel</a>
-    <span class="floating-btn" style="cursor: default; opacity: 0.6;">🧪 New Tools (Coming Soon)</span>
-  </div>
-
-  <!-- Hacker Animation & Fake Terminal -->
-  <div style="display: flex; flex-direction: column; align-items: center; justify-content: center; padding: 30px; margin-top: 40px;">
-
-    <!-- Lottie Hacker Animation -->
-    <lottie-player
-      src="https://assets2.lottiefiles.com/packages/lf20_b1vubngy.json"
-      background="transparent"
-      speed="1"
-      style="max-width: 100%; width: 300px; height: 300px;"
-      loop
-      autoplay>
-    </lottie-player>
-
-    <!-- Fake Terminal -->
-    <div id="fakeTerminal" style="
+    /* Fake terminal styling */
+    #fakeTerminal {
       background: #000;
       color: #00ff00;
       font-family: 'Courier New', Courier, monospace;
@@ -209,15 +91,72 @@
       border-radius: 10px;
       box-shadow: 0 0 20px #00ff00;
       white-space: pre-wrap;
-    ">
-    </div>
+      user-select: none;
+    }
+
+    footer {
+      position: relative;
+      z-index: 20;
+      text-align: center;
+      padding: 15px;
+      color: #0F0;
+      font-weight: bold;
+      user-select: none;
+      font-size: 14px;
+      margin-top: 50px;
+    }
+
+    /* Fire effect container top-right corner */
+    #fireEffectContainer {
+      position: fixed;
+      top: 0;
+      right: 0;
+      width: 150px;
+      height: 150px;
+      pointer-events: none;
+      z-index: 30;
+    }
+  </style>
+</head>
+<body>
+
+  <!-- Matrix background canvas -->
+  <canvas id="matrixCanvas"></canvas>
+
+  <!-- Floating buttons container -->
+  <div id="floatingButtonsContainer">
+    <a href="https://mega.nz/folder/RvgHWBbD#Qr6CW1O4eezqilYbE9JCPA" target="_blank" class="floating-btn">💻 Cyber Security Courses</a>
+    <a href="https://drive.google.com/drive/folders/1zD-JrP4sgIlAedjaLxAMdg_4ArF9IYyN" target="_blank" class="floating-btn">🛠️ Free Hacking Tools</a>
+    <a href="https://drive.google.com/drive/folders/1shNOgbQ_iAfpCz-jPG-SAu5zZxVZiQ3a?usp=drive_link" target="_blank" class="floating-btn">📚 Ebooks & PDFs</a>
+    <a href="https://t.me/+JMBspRMMT74zYWZl" target="_blank" class="floating-btn">📥 Download Zone</a>
+    <a href="https://t.me/+JMBspRMMT74zYWZl" target="_blank" class="floating-btn">🎓 Join Telegram Channel</a>
+    <a href="https://whatsapp.com/channel/0029Vb6Hq0K7YSdCXtjgzt1x" target="_blank" class="floating-btn">💬 Join WhatsApp Channel</a>
+    <span class="floating-btn" style="cursor: default; opacity: 0.6; pointer-events:none;">🧪 New Tools (Coming Soon)</span>
   </div>
 
-  <!-- Lottie Script -->
+  <!-- Fire effect container -->
+  <div id="fireEffectContainer"></div>
+
+  <!-- Main content with Lottie animation and fake terminal -->
+  <div id="mainContent">
+    <!-- Lottie Hacker Animation -->
+    <lottie-player
+      src="https://assets2.lottiefiles.com/packages/lf20_b1vubngy.json"
+      background="transparent"
+      speed="1"
+      style="max-width: 100%; width: 300px; height: 300px;"
+      loop
+      autoplay>
+    </lottie-player>
+
+    <!-- Fake Terminal -->
+    <div id="fakeTerminal"></div>
+  </div>
+<!-- Lottie Script -->
   <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 
-  <!-- Terminal Typing Simulation Script -->
   <script>
+    // Terminal Typing Simulation
     const terminal = document.getElementById("fakeTerminal");
     const lines = [
       "[+] Initializing shell...",
@@ -237,7 +176,6 @@
 
     let index = 0;
     function typeLine() {
-function typeLine() {
       if (index < lines.length) {
         terminal.innerHTML += lines[index] + "\n";
         terminal.scrollTop = terminal.scrollHeight;
@@ -246,14 +184,8 @@ function typeLine() {
       }
     }
     typeLine();
-  </script>
 
-  <footer>
-    &copy; 2025 Dark Tech.ONIMIX All rights reserved.
-  </footer>
-
-  <script>
-    // Matrix background effect setup
+    // Matrix Background Effect
     const canvas = document.getElementById('matrixCanvas');
     const ctx = canvas.getContext('2d');
     const letters = '01';
@@ -309,6 +241,10 @@ function typeLine() {
         let left = parseFloat(btn.style.left);
         let top = parseFloat(btn.style.top);
 
+        // Update position
+        left += btn.speedX;
+        top += btn.speedY;
+
         // Bounce off edges horizontally
         if(left < 0) {
           left = 0;
@@ -332,8 +268,81 @@ function typeLine() {
       });
       requestAnimationFrame(moveButtons);
     }
-
     moveButtons();
   </script>
+<!-- Three.js CDN -->
+  <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/build/three.min.js"></script>
+
+  <script>
+    // Three.js fire effect in top-right corner
+    const fireContainer = document.getElementById('fireEffectContainer');
+    const scene = new THREE.Scene();
+
+    const camera = new THREE.PerspectiveCamera(45, fireContainer.clientWidth / fireContainer.clientHeight, 0.1, 1000);
+    camera.position.z = 5;
+
+    const renderer = new THREE.WebGLRenderer({ alpha: true, antialias: true });
+    renderer.setSize(fireContainer.clientWidth, fireContainer.clientHeight);
+    fireContainer.appendChild(renderer.domElement);
+
+    // Particle geometry for fire sparks
+    const particleCount = 100;
+    const geometry = new THREE.BufferGeometry();
+    const positions = [];
+    const colors = [];
+
+    for(let i = 0; i < particleCount; i++) {
+      positions.push((Math.random() - 0.5) * 1); // x
+      positions.push(Math.random() * 1.5);       // y
+      positions.push((Math.random() - 0.5) * 1); // z
+
+      const color = new THREE.Color();
+      color.setHSL(0.1 + Math.random() * 0.1, 1, 0.5);
+      colors.push(color.r, color.g, color.b);
+    }
+
+    geometry.setAttribute('position', new THREE.Float32BufferAttribute(positions, 3));
+    geometry.setAttribute('color', new THREE.Float32BufferAttribute(colors, 3));
+
+    const material = new THREE.PointsMaterial({
+      size: 0.1,
+      vertexColors: true,
+      transparent: true,
+      opacity: 0.8,
+      blending: THREE.AdditiveBlending,
+      depthWrite: false,
+    });
+
+    const particles = new THREE.Points(geometry, material);
+    scene.add(particles);
+
+    function animate() {
+      requestAnimationFrame(animate);
+
+      const positions = geometry.attributes.position.array;
+      for(let i = 1; i < positions.length; i += 3) {
+        positions[i] += 0.01;
+        if (positions[i] > 1.5) positions[i] = 0;
+      }
+      geometry.attributes.position.needsUpdate = true;
+
+      particles.rotation.y += 0.005;
+
+      renderer.render(scene, camera);
+    }
+
+    animate();
+
+    window.addEventListener('resize', () => {
+      renderer.setSize(fireContainer.clientWidth, fireContainer.clientHeight);
+      camera.aspect = fireContainer.clientWidth / fireContainer.clientHeight;
+      camera.updateProjectionMatrix();
+    });
+  </script>
+
+  <footer>
+    &copy; 2025 Dark Tech.ONIMIX All rights reserved.
+  </footer>
+
 </body>
 </html>
